--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-collapsed": "^4.1.2",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
